# md_timesheet

./: .gitignore  Cargo.toml  README.md
docker/: Dockerfile
src/: main.rs
