[package]
name = "md_timesheet"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_2"] }
gtk4 = { version = "0.9", package = "gtk4", features = ["v4_8"] }
once_cell = {version = "1.20" }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4" }
